fix: add white space fix to resolve spacing bug on firefox (#2774)

--- a/packages/rich-text-editor/src/RichTextEditor/RichTextEditor.scss
+++ b/packages/rich-text-editor/src/RichTextEditor/RichTextEditor.scss
@@ -14,6 +14,7 @@
   padding: $spacing-sm calc(#{$spacing-xs} * 3);
   transition: background-color $animation-duration-immediate,
     border-color $animation-duration-immediate;
+  white-space: pre-wrap;
 
   > p {
     margin: 0 0 $spacing-sm;
